fix(ui): try to resolve HTML element overflow on very small screens

--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,6 @@
 
 html {
     font-family: "JetBrains Mono", "Courier New", monospace;
-    text-size-adjust: 100%;
     overscroll-behavior: none;
 }
 
